--- a/Admin-ECommerce/src/components/widgetLg/widgetLg.css
+++ b/Admin-ECommerce/src/components/widgetLg/widgetLg.css
@@ -50,10 +50,20 @@
 .widgetLgButton.declined{
     background-color: #fff0f1;
     color: #d95087;
-
 }
 .widgetLgButton.pending{
     background-color: #ebf1fe;
     color: #2a7ade;
+}
 
+.widgetLgAction a{
+  padding: 5px 7px;
+  border: none;
+  border-radius: 10px;
+  background-color: #ebf1fe;
+  color: #3bb077;
+  transition: all 0.8s ease;
+}
+.widgetLgAction:hover{
+  transform: scale(1.1);
 }
