--- a/Admin-ECommerce/src/pages/product/product.css
+++ b/Admin-ECommerce/src/pages/product/product.css
@@ -82,6 +82,7 @@
 .productFormLeft {
   display: flex;
   flex-direction: column;
+  width: 30%;
 }
 
 .productFormLeft > label {
@@ -101,17 +102,19 @@
 }
 
 .productUploadImg{
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
   object-fit: cover;
-  margin-right: 20px;
+  display: block;
+  margin: auto;
 }
 
 .productFormRight{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin-left: 50px;
 }
 
 .productUpload{
@@ -121,10 +124,83 @@
 
 .productButton{
   border: none;
-  padding: 5px;
+  padding: 10px 15px;
+  margin: auto;
+  margin-top: 20px;
   border-radius: 5px;
   background-color: darkblue;
   color:white;
   font-weight: 600;
   cursor: pointer;
 }
+
+#carouselArrow{
+  padding: auto;
+  margin: auto;
+  cursor: pointer;
+  border-radius: 5px;
+  opacity: 0.5;
+  transition: all 0.5s ease;
+}
+
+#carouselArrow:hover{
+  opacity: 1.0;
+  transform: scale(1.1);
+}
+
+.img__close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transition: all 0.5s ease;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;  
+  color: grey;
+  z-index: 4;
+}
+
+.img__close:hover{
+    transform: scale(1.5);
+}
+
+.iconContainer{
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top:0;
+  left:0;
+  background-color: rgba(0,0,0,0.01);
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.iconContainer:hover{
+    opacity: 1;
+}
+
+.iconSearch{
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  border-radius: 50%;
+  background-color: white;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  transition: all 0.3s ease;
+}
+.iconSearch:hover{
+  background-color: #e9f5f5;
+  transform: scale(1.1);
+};
+/* 
+.updateImage{
+  margin-left: 20px;
+} */
