--- a/Client-ECommerce/src/App.css
+++ b/Client-ECommerce/src/App.css
@@ -1,4 +1,10 @@
 .link{
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
+}
+@media only screen and (max-width: 700px){
+    audio {
+        width: 100vw !important;
+    }
 }
