--- a/Client-ECommerce/src/components/navbar.css
+++ b/Client-ECommerce/src/components/navbar.css
@@ -11,6 +11,12 @@
   top: -9px;
 }
 
+/* menu dropdown */
+.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiMenu-paper.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation8.MuiPopover-paper {
+  z-index: 2000;
+  min-width: 200px;
+}
+
 @media only screen and (max-width: 700px){
   #search-products{
     padding: 0px;
