--- a/Client-ECommerce/src/components/user-profile.css
+++ b/Client-ECommerce/src/components/user-profile.css
@@ -159,3 +159,20 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
+
+@media only screen and (max-width: 700px){
+  .user{
+    padding: 20px 0px;
+  }
+  .userContainer{
+    display: 'flex';
+    flex-direction: column;
+  }
+  .userUpdate{
+    flex: 1;
+    min-width: 90%;
+  }
+  .widgetLg{
+    flex: 1;
+  }
+}
