--- a/Client-ECommerce/src/components/navbar.css
+++ b/Client-ECommerce/src/components/navbar.css
@@ -17,6 +17,12 @@
   min-width: 200px;
 }
 
+/* search input */
+.MuiAutocomplete-inputRoot {
+  padding: 0 !important;
+  border-radius: 23px !important;
+}
+
 @media only screen and (max-width: 700px){
   #search-products{
     padding: 0px;
