--- a/Client-ECommerce/src/components/notification.css
+++ b/Client-ECommerce/src/components/notification.css
@@ -6,7 +6,7 @@
 
 /* ======= Toast message ======== */
 
-#toast {
+.toast-container {
   position: fixed;
   top: 70px;
   right: 32px;
@@ -117,7 +117,7 @@
 }
 
 @media only screen and (max-width: 700px){
-  #toast{
+  .toast-container{
     width: 80vw;
   }
   .toast{
